Harden native Google auth compatibility